add myLibrary for refrence

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <label for inputRead>Read</label>
                         <input type="checkbox" class ="inputRead"id="inputRead">
                     </div>
-                    <button type="submit" class="btnSubmit" id="btnSubmit" name="btnSubmit" onclick="createDiv()">Submit Book</button>
+                    <button type="submit" class="btnSubmit" id="btnSubmit" name="btnSubmit" onclick="createDivAndDisplay()">Submit Book</button>
                 </div>
             </div>
         <div class="output-container">
