Read/unread fully functional,open choises for new features

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
                     <div class="pages">pages
                         <input type="text" class ="inputPages"id="inputPages">
                     </div>
-                    <div class="read">
-                        <label for inputRead>Read</label>
+                    <div class="checkbox">
                         <input type="checkbox" class ="inputRead"id="inputRead">
                     </div>
                     <button type="submit" class="btnSubmit" id="btnSubmit" name="btnSubmit" onclick="createDivAndDisplay()">Submit Book</button>
